Bug 65847 - Impress crashes on files with embedded SVG
Summary: Impress crashes on files with embedded SVG
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard: target:4.2.0 target:4.1.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-17 08:51 UTC by Vasiliy Shlykov
Modified: 2013-11-21 16:19 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB backtrace (41.59 KB, text/plain)
2013-06-17 08:51 UTC, Vasiliy Shlykov
Details
Test case (56.38 KB, application/vnd.oasis.opendocument.presentation)
2013-06-19 07:30 UTC, Vasiliy Shlykov
Details
console + bt with symbols on master sources (24.12 KB, text/plain)
2013-06-26 19:36 UTC, Julien Nabet
Details
minimal crashing svg (2.00 KB, image/svg+xml)
2013-06-27 18:11 UTC, Thorsten Behrens (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vasiliy Shlykov 2013-06-17 08:51:29 UTC
Created attachment 80937 [details]
GDB backtrace

Regression since 4.0+

Impress 4.0+ crashes on files created by 3.6 version. File could be opened, but on scrolling pages or saving file Impress crashes.

GDB backtrace is huge, attached a few parts from them.
Comment 1 Julien Nabet 2013-06-18 17:25:30 UTC
Vasiliy: could you attach the file so we can try to reproduce this?
Comment 2 Vasiliy Shlykov 2013-06-19 07:30:10 UTC
Created attachment 81050 [details]
Test case

As you wish.
Comment 3 Julien Nabet 2013-06-26 19:36:14 UTC
Created attachment 81498 [details]
console + bt with symbols on master sources

On pc Debian x86-64 with master sources updated today, I got a crash during opening.
I attached bt + console logs.
Comment 4 Julien Nabet 2013-06-26 19:38:23 UTC
I put fdo#65825 because I had a similar bt.

Thorsten: one for you? bt I attached shows a number of stack level > 10000!
Comment 5 Thorsten Behrens (allotropia) 2013-06-27 18:11:11 UTC
Created attachment 81575 [details]
minimal crashing svg
Comment 6 Thorsten Behrens (allotropia) 2013-06-27 18:55:55 UTC
Fixed - infinite recursion during style resolution.
Comment 7 Commit Notification 2013-06-27 19:05:15 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d9b09a3ff38b2cf11ee0b9f9f03d47375f2b11e8

Fix fdo#65847 - avoid infinite recursion in style resolution.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-06-27 19:32:05 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1d405e396361d2a01b29e97ed9f8f0199614fefa&h=libreoffice-4-1

Fix fdo#65847 - avoid infinite recursion in style resolution.


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.