Fix fdo#65847 - avoid infinite recursion in style resolution.

That was previously asking back the node for the font size, which
was again asking the SvgNumber, which was ...
In this case, if the node has relative sizes, this is always
relative to the parent.

Change-Id: Iaa81d0238d9eb73f5af24df347d12d7cb8ba8c0a