svgio/inc/svgio/svgreader/svgtools.hxx
@@ -62,10 +62,12 @@ namespace svgio
         class InfoProvider
         {
         public:
-        virtual ~InfoProvider() {}
+            virtual ~InfoProvider() {}
             virtual const basegfx::B2DRange* getCurrentViewPort() const = 0;
-            virtual double getCurrentFontSize() const = 0;
-            virtual double getCurrentXHeight() const = 0;
+            /// return font size of node inherited from parents
+            virtual double getCurrentFontSizeInherited() const = 0;
+            /// return xheight of node inherited from parents
+            virtual double getCurrentXHeightInherited() const = 0;
         };
 
         enum SvgUnit
